# RLite

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.config.js  pyproject.toml
doc/source/: index.rst  quick_start.rst
docs/source/: cluster.rst  conf.py  config.py  debug.rst  faq.rst  index.rst  inference.rst  interfaces.rst  introduction.rst  quick_start.rst  resman.rst  rlite_init.rst  train.rst
examples/: auto_detect_hf_module_class.py  offload_model.py  train_hf_model.py  train_hf_model_oss.py  train_hf_vlm_model.py  train_lora.py  tutorial.py  vllm_multi_turn_rollout.py  vllm_rollout.py  vllm_vision_rollout.py  weight_sync.py  weight_sync_from_lora.py
rlite/: __init__.py
rlite/inference/: __init__.py  engine.py  utils.py
rlite/inference/interface/: __init__.py  inference_executor.py  inference_worker.py
rlite/inference/vllm/: __init__.py  executor.py  worker.py
rlite/interface/: __init__.py  base_engine.py  base_executor.py  base_worker.py
rlite/interface/inference/: __init__.py  inference_executor.py  inference_worker.py
rlite/interface/train/: __init__.py  train_executor.py  train_worker.py
rlite/nn/: __init__.py  fsdp.py  fsdp2.py  inference_module.py  train_module.py
rlite/resman/: __init__.py  resource_bundle.py  resource_consumer.py  resource_manager.py
rlite/train/: __init__.py  engine.py
rlite/train/fsdp/: __init__.py  executor.py  worker.py
rlite/train/fsdp2/: __init__.py  executor.py  (+1 more)
rlite/utils/: __init__.py  async_context.py  checkpoint.py  distributed.py  misc.py  need_parallel.py  registry.py  tensorboard.py
(+5 files in other folders)
