[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlite"
version = "0.1.0"
description = "A lightweight reinforcement learning framework that integrates seamlessly into your codebase, empowering developers to focus on algorithms with minimal intrusion."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Han Zhang", email = "zh950713@gmail.com" }
]
dependencies = [
    "accelerate>=0.26.0",
    "cloudpickle",
    "debugpy>=1.8.0",
    "loguru",
    "numpy",
    "pynvml",
    "pandas",
    "ray",
    "safetensors",
    "tqdm",
    "tensorboard",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "vllm>=0.8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rlite"]

[tool.hatch.version]
path = "src/rlite/__version__.py"
